feat: start,stop,delete forward
